# droid-kernal

./: CMakeLists.txt  README.md  command.txt
common/: command.txt
common/drivers/staging/binder/: .gitignore  CMakeLists.txt  Makefile  binder.c  binder_alloc.c  binder_alloc.h  binder_fs.h  binder_internal.h  binderfs.c  command.txt  sequence.txt
common/drivers/staging/log/: .gitignore  CMakeLists.txt  Makefile  logger.c  logger.h
frameworks/av/media/mediaserver/: CMakeLists.txt  main_mediaserver.cpp
frameworks/droid/core/include/zygotesocket/: ZygoteSocket.h
frameworks/droid/core/zygote/jni/: CMakeLists.txt  droid_internal_os_ZygoteInit.cpp  droid_internal_os_ZygoteInit.h  droid_internal_os_ZygoteSocketClient.cpp  droid_internal_os_ZygoteSocketClient.h  droid_internal_os_ZygoteSocketServer.cpp  droid_internal_os_ZygoteSocketServer.h  droid_internal_os_ZygoteSocketServer_Receiver.h
frameworks/droid/core/zygote/zygotesocket/: CMakeLists.txt  ZygoteSocketClient.cpp  ZygoteSocketServer.cpp
frameworks/droid/jni/: CMakeLists.txt  droid_utils_Log.h
frameworks/droid/runtime/jni/: CMakeLists.txt  droid_util_Log.cpp  droid_utils_Log.cpp
frameworks/idl/: CMakeLists.txt
frameworks/idl/include/droid/os/: BnServiceManager.h  BpServiceManager.h  IServiceCallback.h  IServiceManager.h
frameworks/idl/native/: CMakeLists.txt
frameworks/idl/native/libs/binder/: CMakeLists.txt
frameworks/idl/native/libs/binder/droid/os/: IServiceManager.cpp
frameworks/native/: CMakeLists.txt
frameworks/native/cmds/servicemanager/: CMakeLists.txt  ServiceManager.cpp  ServiceManager.h  main.cpp
frameworks/native/include/binder/: Binder.h  IBinder.h  IInterface.h  IPCThreadState.h  IServiceManager.h  Parcel.h  ProcessState.h  Status.h
frameworks/native/libs/binder/: Binder.cpp  BpBinder.cpp  CMakeLists.txt  IPCThreadState.cpp  IServiceManager.cpp  Parcel.cpp  ProcessState.cpp  Static.cpp  Static.h  Status.cpp
frameworks/native/libs/binder/include/binder/: BpBinder.h
system/core/: CMakeLists.txt
system/core/include/log/: log.h
system/core/include/utils/: Condition.h  DroidThreads.h  Errors.h  KeyedVector.h  Looper.h  Mutex.h  RefBase.h  SortedVector.h  String16.h  String8.h  StrongPointer.h  Thread.h  ThreadDefs.h  Timers.h  TypeHelpers.h  Vector.h  VectorImpl.h  plot.h
system/core/liblog/: CMakeLists.txt  log.cpp
system/core/liblog/include/: log.h
system/core/liblog/include/log/: log.h
system/core/libutils/: CMakeLists.txt  Looper.cpp  Mutex.cpp  RefBase.cpp  SharedBuffer.cpp  SharedBuffer.h  String16.cpp  String8.cpp  Threads.cpp  Timers.cpp  Unicode.cpp  VectorImpl.cpp  plot.cpp  trash-basket.txt
system/core/libutils/include/: plot.h
test/: install-binder.sh  uninstall-binder.sh
test/DroidThread/: CMakeLists.txt  DroidThread.cpp
test/common/clib/: CMakeLists.txt
test/common/clib/lru/: .gitignore  CMakeLists.txt  LruMain.c  LruShrinker.c  Makefile
test/common/drivers/staging/log/: CMakeLists.txt  LogPrinter.cpp  OpenLogDriver.cpp  logger.h
test/frameworks/droid/core/zygote/zygotesocket/: CMakeLists.txt  ZygoteSocketClientTest.cpp  ZygoteSocketServerTest.cpp
test/jvm/: CMakeLists.txt  CreateJvm.cpp  SignalTest.cpp  compile.txt
test/system/core/: CMakeLists.txt  LightPointer.cpp  LooperTest.cpp  MPThreadTest.cpp  PThreadTest.cpp  RunnableThread.cpp  RunnableThread.h  String8Test.cpp  StrongWeakPointer.cpp  VectorTest.cpp  assert_order.txt
